--- a/client/package.json
+++ b/client/package.json
@@ -3,13 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^1.5.1",
+    "install": "^0.12.1",
     "node-sass": "^4.7.2",
+    "npm": "^6.4.0",
     "npm-run-all": "^4.1.2",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "react": "^16.3.0",
+    "react-dom": "^16.3.3",
     "react-redux": "^5.0.7",
     "react-router-redux": "^4.0.8",
     "react-scripts": "1.1.4",
+    "recharts": "^1.1.0",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0"
   },
